--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -5,16 +5,9 @@ on:
       - main
 jobs:
   conventional-commits-pr:
+    if: github.event.pull_request.draft == false
     name: Validate Conventional Commits PR
     runs-on: ubuntu-latest
     steps:
       - uses: crazy-max/ghaction-dump-context@v1
-      - uses: amannn/action-semantic-pull-request@v3.4.6
-        with:
-          types: |
-            fix
-            feat
-            norelease
-          validateSingleCommit: true
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+      - uses: catalystsquad/action-validate-conventional-commits-pr@v1
